# template_project

./: .gitignore  LICENSE  README.md
doc/: CHANGELOG.md
doc/projects/: calc_project.txt  word_project.txt
more/: CMakeLists.txt
projects/: CMakeLists.txt
projects/calculator/: CMakeLists.txt
projects/calculator/include/: calculator.hpp
projects/calculator/src/: calculator.cpp  main.cpp
projects/words/: CMakeLists.txt  Doxyfile
projects/words/include/: words.hpp
projects/words/src/: main.cpp  words.cpp
projects/words_tests/: CMakeLists.txt  Doxyfile
projects/words_tests/include/: tests.hpp
projects/words_tests/src/: main.cpp  tests.cpp
scripts/: build.py  commit_push.py  set_precommit_hook.py
