# cd /home/username/dev/visual/_BUILD
# cmake -G"Unix Makefiles" ..
# cmake -G"Visual Studio 15 2017 Win64" ..
# cmake -G"Visual Studio 15 2017 Win32" ..

CMAKE_MINIMUM_REQUIRED (VERSION 3.12)
PROJECT (Words_ops)
MESSAGE(STATUS "CMake version: " ${CMAKE_MAJOR_VERSION} "." ${CMAKE_MINOR_VERSION})

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(PROJ_NAME "words")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/${PROJ_NAME})
SET(PROJ_NAME "words_tests")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/${PROJ_NAME})
SET(PROJ_NAME "calculator")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/${PROJ_NAME})
